--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
   </style>
 </head>
 
-<body>
+<body class="flexbox">
   <main>
-    <section class="container">
+    <article class="container">
       <!--LEFT SIDE-->
-      <div class="result">
+      <section class="result">
         <h2>Your Result</h2>
         <div class="circle">
           <h3>76</h3>
           <p>of 100</p>
         </div>
-        <h4>Great</h4>
+        <h3 class="message-title">Great</h3>
         <p>You scored higher than 65% of the people who have taken these tests.</p>
-      </div>
+      </section>
       <!--END LEFT SIDE-->
 
       <!--RIGHT SIDE-->
@@ -91,7 +91,7 @@
         <button>Continue</button>
         <!--END RIGHT SIDE-->
       </div>
-    </section>
+    </article>
 
   </main>
 
