mobile first styles

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
   </style>
 </head>
 
-<body class="flexbox">
-  <main>
-    <article class="container">
+<body>
+  <main class="flexbox">
+    <article class="container flexbox">
       <!--LEFT SIDE-->
-      <section class="result">
-        <h2>Your Result</h2>
-        <div class="circle">
-          <h3>76</h3>
-          <p>of 100</p>
+      <section class="result flexbox">
+        <h2 class="result-title flexbox">Your Result</h2>
+        <div class="circle flexbox">
+          <h3 class="points">76</h3>
+          <p class="max-points">of 100</p>
         </div>
         <h3 class="message-title">Great</h3>
-        <p>You scored higher than 65% of the people who have taken these tests.</p>
+        <p class="message">You scored higher than 65% of the people who have taken these tests.</p>
       </section>
       <!--END LEFT SIDE-->
 
