--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
   <main class="flexbox">
-    <article class="container flexbox">
+    <article class="flexbox flexbox-row">
       <!--LEFT SIDE-->
       <section class="result flexbox">
         <h2 class="result-title flexbox">Your Result</h2>
@@ -70,7 +70,7 @@
             <p class="score">72 <span class="gray">/ 100</span></p>
           </li>
         </ul>
-        <button class="btn">Continue</button>
+        <button class="btn flexbox">Continue</button>
         <!--END RIGHT SIDE-->
       </section>
     </article>
